<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vf_robot_slam</name>
  <version>0.1.0</version>
  <description>SLAM and localization package for ViroFighter UVC-1 robot</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- RTAB-Map dependencies -->
  <depend>rtabmap_ros</depend>
  <depend>rtabmap_sync</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_viz</depend>
  <depend>rtabmap_util</depend>

  <!-- Depth to LaserScan -->
  <depend>depthimage_to_laserscan</depend>

  <!-- Laser scan merging (for dual camera mode) -->
  <!-- NOTE: ira_laser_tools must be built from source:
       cd ~/your_ws/src
       git clone https://github.com/iralabdisco/ira_laser_tools.git -b ros2
       colcon build - -packages-select ira_laser_tools
       
       Alternatively, configure Nav2 costmaps to use multiple observation sources
       instead of merging scans (see README.md)
  -->
  <!-- <depend>ira_laser_tools</depend> -->

  <!-- Image processing -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
