<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vf_robot_slam</name>
  <version>0.1.0</version>
  <description>SLAM and localization package for ViroFighter UVC-1 robot</description>
  <maintainer email="olipravin18@gmail.com">Pravin Oli</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- RTAB-Map dependencies -->
  <depend>rtabmap_ros</depend>
  <depend>rtabmap_sync</depend>
  <depend>rtabmap_slam</depend>
  <depend>rtabmap_viz</depend>
  <depend>rtabmap_util</depend>

  <!-- Depth to LaserScan -->
  <depend>depthimage_to_laserscan</depend>
  <depend>pointcloud_to_laserscan</depend>

  <!-- Image processing -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <!-- Python runtime dependencies for scan_merger.py and pc_to_scan.py -->
  <exec_depend>python3-numpy</exec_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
